Reorganizace souborů obrázků, Trideni zeminy

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,9 +14,10 @@ const navItems = [
 		href: "#",
 		children: [
 			{ name: "Kompostárna Krhov", href: "/kompostarna-krhov" },
+			{ name: "Drcení biomasy", href: "/drceni-biomasy" },
 			{ name: "Kontejnerová doprava", href: "/kontejnerova-doprava" },
 			{ name: "Výkopové práce", href: "/vykopove-prace" },
-			{ name: "Drcení biomasy", href: "/drceni-biomasy" },
+			{ name: "Třídění zeminy a kompostu", href: "/trideni-zeminy" },
 		],
 	},
 	{ name: "O nás", href: "/o-nas" },
