--- a/src/pages/kompostarna-krhov.astro
+++ b/src/pages/kompostarna-krhov.astro
@@ -48,7 +48,7 @@ const wasteCatalogue = [
     transparentNav={true}
 >
     <Hero
-        image="/images/kompostarna-hero.webp"
+        image="/images/kompostarna/hero.webp"
         imageAlt="Kompostárna Krhov - Služby Musil"
     >
         <Fragment slot="title">
@@ -155,7 +155,9 @@ const wasteCatalogue = [
                         >
                             <div class="h-48 overflow-hidden relative">
                                 <img
-                                    src={url("/images/kompost-detail.png")}
+                                    src={url(
+                                        "/images/kompostarna/kompost-detail.png",
+                                    )}
                                     alt="Náš kompost"
                                     class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
                                 />
@@ -196,7 +198,9 @@ const wasteCatalogue = [
                         >
                             <div class="h-48 overflow-hidden relative">
                                 <img
-                                    src={url("/images/substrat-detail.png")}
+                                    src={url(
+                                        "/images/kompostarna/substrat-detail.png",
+                                    )}
                                     alt="Náš substrát"
                                     class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
                                 />
@@ -310,7 +314,9 @@ const wasteCatalogue = [
                             >
                                 <div class="h-48 overflow-hidden relative">
                                     <img
-                                        src={url("/images/bioodpad-detail.png")}
+                                        src={url(
+                                            "/images/kompostarna/bioodpad-detail.png",
+                                        )}
                                         alt="Likvidace bioodpadu"
                                         class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
                                     />
@@ -346,7 +352,9 @@ const wasteCatalogue = [
                             >
                                 <div class="h-48 overflow-hidden relative">
                                     <img
-                                        src={url("/images/koreny-detail.png")}
+                                        src={url(
+                                            "/images/kompostarna/koreny-detail.png",
+                                        )}
                                         alt="Likvidace kořenů"
                                         class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
                                     />
