--- a/src/pages/o-nas.astro
+++ b/src/pages/o-nas.astro
@@ -9,22 +9,29 @@ const services = [
         title: "Kompostárna Krhov",
         description:
             "Provoz certifikované kompostárny, prodej substrátů a likvidace bioodpadu.",
-        image: "/images/kompostarna-hero.webp",
+        image: "/images/kompostarna/hero.webp",
         href: "/kompostarna-krhov",
     },
     {
         title: "Kontejnerová doprava",
         description:
             "Přistavení kontejnerů na sutě a odpady vozem Tatra Phoenix 6x6.",
-        image: "/images/kontejnerova-doprava-hero.jpg",
+        image: "/images/kontejnerova-doprava/hero.jpg",
         href: "/kontejnerova-doprava",
     },
     {
         title: "Výkopové práce",
         description:
             "Profesionální zemní a výkopové práce moderním minibagrem.",
-        image: "/images/excavator-hero.jpg",
+        image: "/images/vykopove-prace/hero.jpg",
         href: "/vykopove-prace",
+    },
+    {
+        title: "Třídění zeminy a kompostu",
+        description:
+            "Třídění biomasy, zeminy a kompostu špičkovým bubnovým třídičem.",
+        image: "/images/trideni-zeminy/hero.jpg",
+        href: "/trideni-zeminy",
     },
     {
         title: "Drcení biomasy",
