--- a/src/pages/vykopove-prace.astro
+++ b/src/pages/vykopove-prace.astro
@@ -35,7 +35,7 @@ const specs = [
     transparentNav={true}
 >
     <Hero
-        image="/images/excavator-hero.jpg"
+        image="/images/vykopove-prace/hero.jpg"
         imageAlt="Výkopové práce minibagrem"
     >
         <Fragment slot="title">
@@ -74,7 +74,7 @@ const specs = [
                         zemědělskou sezonu.
                     </p>
                     <img
-                        src={url("/images/pos.svg")}
+                        src={url("/images/vykopove-prace/pos.svg")}
                         alt="Podpora z programu rozvoje venkova"
                         class="mt-6 w-full max-w-md h-auto"
                     />
